--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
 	"semi": true,
 	"singleQuote": true,
-	"tabwidth": 4,
+	"tabWidth": 4,
 	"useTabs": true,
 	"trailingComma": "all",
 	"printWidth": 100,
