--- a/angular.json
+++ b/angular.json
@@ -30,8 +30,15 @@
 						"tsConfig": "tsconfig.app.json",
 						"aot": true,
 						"assets": ["src/favicon.ico", "src/assets"],
-						"styles": ["src/styles.scss", "node_modules/prismjs/themes/prism-okaidia.css"],
-						"scripts": ["node_modules/marked/lib/marked.js", "node_modules/prismjs/prism.js"]
+						"styles": [
+							"src/styles.scss",
+							"node_modules/prismjs/themes/prism-okaidia.css",
+							"node_modules/ngx-toastr/toastr.css"
+						],
+						"scripts": [
+							"node_modules/marked/lib/marked.js",
+							"node_modules/prismjs/prism.js"
+						]
 					},
 					"configurations": {
 						"production": {
@@ -95,7 +102,11 @@
 				"lint": {
 					"builder": "@angular-devkit/build-angular:tslint",
 					"options": {
-						"tsConfig": ["tsconfig.app.json", "tsconfig.spec.json", "e2e/tsconfig.json"],
+						"tsConfig": [
+							"tsconfig.app.json",
+							"tsconfig.spec.json",
+							"e2e/tsconfig.json"
+						],
 						"exclude": ["**/node_modules/**"]
 					}
 				},
